Added SCM Revision to health check.
